Ejercicios extra flujos y funciones resueltos

--- a/03-Python/04-Functions/02-Practica/Ejercicios funciones_enunciados.ipynb
+++ b/03-Python/04-Functions/02-Practica/Ejercicios funciones_enunciados.ipynb
@@ -92,19 +92,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Miercoles\n"
+     ]
+    }
+   ],
+   "source": [
+    "def dia_semana(dia):\n",
+    "    lista_dias = ['Lunes','Martes','Miercoles','Jueves','Viernes','Sabado','Domingo']\n",
+    "    print(lista_dias[dia-1])\n",
+    "\n",
+    "dia_semana(3)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Ejercicio 2\n",
     "En el ejercicio 8 de bucles, creábamos una pirámide invertida, cuyo número de pisos venía determinado por un input del usuario. Crea una función que replique el comportamiento de la pirámide, y utiliza un único parámetro de entrada de la función para determinar el número de filas de la pirámide, es decir, elimina la sentencia input."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -123,14 +137,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2 < 3\n"
+      "2 menor que 3\n"
      ]
     }
    ],
@@ -139,33 +153,12 @@
     "    if x == y:\n",
     "        print('Iguales')\n",
     "    elif x > y:\n",
-    "        print(x, '>', y)\n",
+    "        print(x, 'mayor que', y)\n",
     "    else:    \n",
-    "        print(x, '<', y)\n",
+    "        print(x, 'menor que', y)\n",
     "\n",
     "compara (2,3)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -195,10 +188,34 @@
     "texto = 'Ya ha salido el Tomb Raider remastered'\n",
     "\n",
     "def contador(texto:str, letra):\n",
+    "    texto\n",
     "    rep = texto.count(letra)\n",
     "    return rep\n",
     "\n",
     "contador(texto,'a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def conteo(cadena, letra):\n",
+    "    letras1 = cadena.lower()\n",
+    "    letras2 = letra.lower()\n",
+    "    total = letras1.count(letras2)\n",
+    "    return total\n",
+    "\n",
+    "print(conteo('Helena','n'))"
    ]
   },
   {
@@ -232,6 +249,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def conteo_dict(text):\n",
+    "    dict_conteo = {}\n",
+    "    for i in text:\n",
+    "        if i in dict_conteo.keys():\n",
+    "            dict_conteo[i] = dict_conteo[i] + 1 \n",
+    "        else:\n",
+    "            dict_conteo[i] = 1\n",
+    "    return dict_conteo\n",
+    "\n",
+    "# si esta en el diccionario, le suma 1, si no esta (else): inicializa con valor 1"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -244,24 +279,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "list.remove(x): x not in list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[15], line 12\u001b[0m\n\u001b[0;32m      9\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m lista_sum1\n\u001b[0;32m     11\u001b[0m lista_sum \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLunes\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;241m19\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFebrero\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m---> 12\u001b[0m \u001b[43msumacero\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlista_sum\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[38;5;241;43m2024\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# depende de si quiero conservar la misma lista\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[15], line 8\u001b[0m, in \u001b[0;36msumacero\u001b[1;34m(lista_sum, add, remove, elemento)\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m remove \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m      7\u001b[0m     lista_sum1 \u001b[38;5;241m=\u001b[39m lista_sum\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[1;32m----> 8\u001b[0m     \u001b[43mlista_sum1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mremove\u001b[49m\u001b[43m(\u001b[49m\u001b[43melemento\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m lista_sum1\n",
-      "\u001b[1;31mValueError\u001b[0m: list.remove(x): x not in list"
-     ]
+     "data": {
+      "text/plain": [
+       "['Lunes', 'Febrero']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "def sumacero (lista_sum,add,remove,elemento):\n",
+    "def sumacero (lista_sum,add,remove,elemento = None): #si no pongo nada por defecto es nada, para que no haga nada la funcion si no meto nada\n",
     "    if add == True:\n",
     "        lista_sum1 = lista_sum.copy()\n",
     "        lista_sum1.append(elemento)\n",
@@ -272,23 +305,26 @@
     "        return lista_sum1\n",
     "\n",
     "lista_sum = ['Lunes',19,'Febrero']\n",
-    "sumacero(lista_sum,False,True,2024)\n",
-    "# depende de si quiero conservar la misma lista"
+    "\n",
+    "sumacero(lista_sum,False,True,19)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Lunes', 19, 'Febrero']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lista_sum)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -300,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -316,8 +352,8 @@
     "_2 = 'el'\n",
     "_3 = 'ramp-up'\n",
     "\n",
-    "def cervantes(word,word1,word2):\n",
-    "    texto = print(word,word1,word2)    \n",
+    "def cervantes(*words):\n",
+    "    texto = print(*words, sep = ' ')    \n",
     "\n",
     "cervantes(_1,_2,_3)\n",
     "    \n"
