--- a/03-Python/04-Functions/02-Practica/Extra ejercicios problemas y funciones_enunciados.ipynb
+++ b/03-Python/04-Functions/02-Practica/Extra ejercicios problemas y funciones_enunciados.ipynb
@@ -55,14 +55,9 @@
     "lista_c = [35, 29, 55]\n",
     "\n",
     "def contarpatas (lista_pollos:list, lista_cerdos:list):\n",
-    "    for pollos in lista_pollos:\n",
-    "        patas = pollos * 2\n",
-    "        return patas\n",
-    "    for cerdos in lista_cerdos:\n",
-    "        pezuñas = cerdos*4\n",
-    "        return pezuñas\n",
-    "    total_patas = patas + pezuñas\n",
-    "    return total_patas\n",
+    "    legs = [chicken*2 for chicken in lista_pollos] + [pigs*4 for pigs in lista_cerdos]\n",
+    "    total_legs = sum(legs)\n",
+    "    return total_legs\n",
     "\n",
     "contarpatas(lista_p,lista_c)"
    ]
@@ -86,7 +81,19 @@
     "\n",
     "granja3 = {\"pollos\": 101,\n",
     "           \"cerdos\": 55\n",
-    "}"
+    "}\n",
+    "\n",
+    "def contar_granjas(granja1,granja2,granja3):\n",
+    "    for items1 in granja1.items():\n",
+    "        total_granja1 = granja1['pollos']*2 + granja1['cerdos']*4\n",
+    "    for items2 in granja2.items():\n",
+    "        total_granja2 = granja2['pollos']*2 + granja2['cerdos']*4\n",
+    "    for items3 in granja3.items():\n",
+    "        total_granja3 = granja3['pollos']*2 + granja3['cerdos']*4\n",
+    "    total = total_granja1 + total_granja2 + total_granja3\n",
+    "    return total\n",
+    "\n",
+    "contar_granjas(granja1,granja2,granja3)"
    ]
   },
   {
@@ -108,9 +115,7 @@
     "            break\n",
     "    print(suc)\n",
     "\n",
-    "sucesion (30)\n",
-    "    \n",
-    "    "
+    "sucesion (30)"
    ]
   },
   {
@@ -137,35 +142,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2, 13, 24, 35, 46, 57, 68, 79, 90, 101, 112, 123, 134, 145, 156, 167, 178, 189, 200, 211]\n",
-      "[1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024, 2048, 4096, 8192, 16384, 32768, 65536, 131072, 262144, 524288]\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "True\n",
-      "True\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[61], line 26\u001b[0m\n\u001b[0;32m     21\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m (lista_inicial_geo):\n\u001b[0;32m     22\u001b[0m         \u001b[38;5;28mprint\u001b[39m(lista_inicial_geo[i] \u001b[38;5;241m>\u001b[39m lista_inicial_arit [i])\n\u001b[1;32m---> 26\u001b[0m \u001b[43mgeo_vs_arit\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m20\u001b[39;49m\u001b[43m)\u001b[49m \n",
-      "Cell \u001b[1;32mIn[61], line 22\u001b[0m, in \u001b[0;36mgeo_vs_arit\u001b[1;34m(z)\u001b[0m\n\u001b[0;32m     20\u001b[0m i \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m (lista_inicial_geo):\n\u001b[1;32m---> 22\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[43mlista_inicial_geo\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m>\u001b[39m lista_inicial_arit [i])\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Más sucesiones\n",
     "# Si tenemos una sucesión que partiendo de la lista_inicial_arit = [2] y se incrementa de 11 en 11\n",
@@ -186,9 +165,10 @@
     "        if len(lista_inicial_geo) == z:\n",
     "            break\n",
     "    print(lista_inicial_geo)\n",
-    "    i = 0\n",
-    "    for i in (lista_inicial_geo):\n",
-    "        print(lista_inicial_geo[i] > lista_inicial_arit [i])\n",
+    "\n",
+    "    for indice,(item1,item2) in enumerate(zip(lista_inicial_arit,lista_inicial_geo)):\n",
+    "        if item2 > item1:\n",
+    "            print(f\"El indice {indice} en lista geometrica {item2} es mayor que el elemento {item1}\")\n",
     "\n",
     "geo_vs_arit (20)\n",
     "    "
@@ -196,14 +176,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Más sucesiones\n",
-    "# Combinemos aritméticas y geométricas: cada nuevo elemento se genera multiplicando el anterior por un número y sumando una cantidad fija\n",
-    "# Ejemplo lista = [1], podemos generar números que multipliquen por 3 y sumen 12. Así pues, el siguiente sería 1*3+12 y así, sucesivamente\n",
-    "# Haz una función que tenga como argumentos el multiplicador y la suma fija para poder generar cualquier sucesión de este tipo "
+    "# Combinemos aritméticas y geométricas: cada nuevo elemento se genera multiplicando el anterior por un número y\n",
+    "# sumando una cantidad fija.\n",
+    "# Ejemplo lista = [1], podemos generar números que multipliquen por 3 y sumen 12. Así pues, el siguiente\n",
+    "# sería 1*3+12 y así, sucesivamente.\n",
+    "# Haz una función que tenga como argumentos el multiplicador y la suma fija para poder generar cualquier\n",
+    "# sucesión de este tipo \n",
+    "\n",
+    "def multisuma (multiplicando,sumando,i,n):\n",
+    "    lista = [i]\n",
+    "    for x in lista:\n",
+    "        lista.append((x*multiplicando)+sumando)\n",
+    "        if len(lista) == n:\n",
+    "            break\n",
+    "    print(lista)\n",
+    "\n",
+    "multisuma(2,7,0,20)\n",
+    "\n"
    ]
   },
   {
@@ -214,8 +208,22 @@
    "source": [
     "# Un último de sucesiones\n",
     "# Piensa en el ejemplo de Fibonacci\n",
-    "# Las sucesiones pueden ser muy flexibles: partiendo de la lista = [5,7], intenta generar la sucesión que usa la media de los dos números previos y suma uno al resultado\n",
-    "# Sigue pensando en Fibonacci! "
+    "# Las sucesiones pueden ser muy flexibles: partiendo de la lista = [5,7], intenta generar la sucesión que usa\n",
+    "# la media de los dos números previos y suma uno al resultado\n",
+    "# Sigue pensando en Fibonacci! \n",
+    "\n",
+    "def media_suma(lista,n):\n",
+    "    for i in lista:\n",
+    "        nextn = ((lista[-2] + lista[-1])/2)+1\n",
+    "        lista.append(nextn)\n",
+    "        if len(lista) == n:\n",
+    "         break\n",
+    "    print(lista)\n",
+    "\n",
+    "lista_ini = [5,7]\n",
+    "\n",
+    "media_suma(lista_ini,20)\n",
+    "\n"
    ]
   },
   {
@@ -224,7 +232,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Crea un programa que pida al usuario su nombre, apellidos, edad y DNI y lo guarde en un diccionario"
+    "# Crea un programa que pida al usuario su nombre, apellidos, edad y DNI y lo guarde en un diccionario\n",
+    "\n",
+    "def persona ():\n",
+    "    datos = dict ()\n",
+    "    datos['Nombre'] = input('Introduzca su nombre')\n",
+    "    datos['Apellidos'] = input('Introduzca sus apellidos')\n",
+    "    datos['Edad'] = input('Introduzca su edad')\n",
+    "    datos['DNI']= input('Introduzca su DNI')\n",
+    "    return datos\n",
+    "\n",
+    "persona() "
    ]
   },
   {
@@ -279,29 +297,81 @@
     "# Crea un programa que pida al usuario dos números enteros para calcular la potencia del primero al segundo. \n",
     "# Captura la excepción de que haya introducido algún número con decimales, y haz que calcule la potencia redondeando\n",
     "# con cero decimales\n",
+    "\n",
+    "def potencia ():\n",
+    "    input1 = input('Introduce un número')\n",
+    "    input2 = input('Introduce otro número')\n",
+    "    from math import pow\n",
+    "    try:\n",
+    "        resultado = pow(float(input1),float(input2))\n",
+    "        return resultado\n",
+    "    except:\n",
+    "        x = round(float(input1),0)\n",
+    "        y = round(float(input2),0)\n",
+    "        resultado1 = pow(x,y)\n",
+    "        return resultado1\n",
+    "\n",
+    "potencia()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n",
+      "4.0\n",
+      "3.0\n",
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Crea un programa que pida al usuario números para calcular la raíz cuadrada de los mismos. \n",
+    "# Captura la excepción de que haya introducido un número negativo y haz que calcule la raíz cuadrada\n",
+    "# del valor absoluto en esa situación\n",
+    "# El programa continua pidiendo al usuario números y calculando la raíz hasta que el usuario introduzce el número 0,\n",
+    "# en cuyo caso, termina el programa.\n",
+    "\n",
+    "def raiz ():\n",
+    "    input3 = input('Introduce un número')\n",
+    "    from math import sqrt\n",
+    "    try:\n",
+    "        print((sqrt(float(input3))))\n",
+    "        while input3:\n",
+    "            input4 = input('Introduce un numero')\n",
+    "            x = sqrt(float(input4))\n",
+    "            print(x)\n",
+    "            if input4 == '0':\n",
+    "             break\n",
+    "    except:\n",
+    "        print((sqrt(abs(float(input3)))))\n",
+    "        while input3:\n",
+    "            input5 = input('Introduce un numero')\n",
+    "            y = sqrt(abs(float(input5)))\n",
+    "            print(y)\n",
+    "            if input5 == '0':\n",
+    "             break\n",
+    "    \n",
+    "raiz()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Crea un programa que pida al usuario dos números enteros para calcular la potencia del primero al segundo.\n",
+    "# Captura la excepción de que haya introducido algún número con decimales, y haz que calcule la potencia redondeando\n",
+    "# con cero decimales\n",
+    "# El programa continua pidiendo al usuario números y calculando la potencia hasta que el usuario introduzce \n",
+    "# dos veces el número 0, en cuyo caso, termina el programa.\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Crea un programa que pida al usuario números para calcular la raíz cuadrada de los mismos. Captura la excepción de que haya introducido un número negativo \n",
-    "# y haz que calcule la raíz cuadrada del valor absoluto en esa situación\n",
-    "# El programa continua pidiendo al usuario números y calculando la raíz hasta que el usuario introduzce el número 0, en cuyo caso, termina el programa."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Crea un programa que pida al usuario dos números enteros para calcular la potencia del primero al segundo. Captura la excepción de que haya introducido algún número con decimales,\n",
-    "# y haz que calcule la potencia redondeando con cero decimales\n",
-    "# El programa continua pidiendo al usuario números y calculando la potencia hasta que el usuario introduzce dos veces el número 0, en cuyo caso, termina el programa."
    ]
   },
   {
@@ -340,7 +410,15 @@
     "# Así como el día que menos dineró gano y el día que más dinero ganó\n",
     "\n",
     "horas_dias = [7, 8, 6, 4, 0, 7.5, 6.5]\n",
-    "\n"
+    "\n",
+    "def salario(horas_dias:list,salario): \n",
+    "    jornal = [jornada*salario for jornada in horas_dias]\n",
+    "    for indice,salario in enumerate(jornal):\n",
+    "        print('El sueldo maximo fue de', max(jornal), 'en la jornada', indice + 1)\n",
+    "        print('El sueldo minimo fue de', min(jornal), 'en la jornada', indice + 1)\n",
+    "    return\n",
+    "\n",
+    "salario(horas_dias, 25)"
    ]
   },
   {
@@ -351,9 +429,30 @@
    "source": [
     "# Calcula la media de salario\n",
     "# ¿Podrías calcular la media de salario percibido según el ejercicio anterior?\n",
-    "# Si el máximo de horas trabajadas por días es 8. ¿Cuánto dinero extra podría haber ganado cada día si trabajase siempre el máximo de horas posibles?\n",
+    "# Si el máximo de horas trabajadas por días es 8. ¿Cuánto dinero extra podría haber ganado cada día si trabajase\n",
+    "# siempre el máximo de horas posibles?\n",
     "\n",
-    "horas_dias = [7, 8, 6, 4, 0, 7.5, 6.5]\n"
+    "horas_dias = [7, 8, 6, 4, 0, 7.5, 6.5]\n",
+    "\n",
+    "def salario(horas_dias:list,salario): \n",
+    "    jornal = [jornada*salario for jornada in horas_dias]\n",
+    "    mean = sum(jornal)/len(jornal)\n",
+    "    return mean\n",
+    "\n",
+    "def diferencia(horas_dias,salario):\n",
+    "    jornal = [jornada*salario for jornada in horas_dias]\n",
+    "    jornada_max = 8\n",
+    "    sueldo_integro = salario*jornada_max\n",
+    "    diferencia = [sueldo_integro-jornal_diario for jornal_diario in jornal]\n",
+    "    for ind,extra in enumerate(diferencia):\n",
+    "        if extra == 0:\n",
+    "            print('En la jornada', ind + 1, 'se trabajo el maximo de horas')\n",
+    "        else:   \n",
+    "            print('En la jornada', ind + 1, 'se podrian haber ganado', extra, '€')\n",
+    "    return\n",
+    "\n",
+    "salario (horas_dias,25)\n",
+    "diferencia(horas_dias,25)"
    ]
   },
   {
@@ -365,8 +464,31 @@
     "# Usa una función que con el número de horas trabajadas y el salario por hora, calcule:\n",
     "# El dinero ganado ese dia\n",
     "# Las horas que descansó (si tiene 24 horas el día)\n",
-    "# El dinero que pudo haber ganado si hubiera trabajado las 8 horas máximas permitidas"
+    "# El dinero que pudo haber ganado si hubiera trabajado las 8 horas máximas permitidas\n",
+    "\n",
+    "def salario(jornada:int,salario:float): \n",
+    "    jornal = jornada*salario\n",
+    "    h_dia = 24\n",
+    "    descanso = h_dia - jornada\n",
+    "    jornada_max = 8\n",
+    "    jornal_max = jornada_max*salario\n",
+    "    dif_extra = jornal_max - jornal\n",
+    "    print(f'El dinero ganado fue de {jornal} €')\n",
+    "    print(f'El descanso fue de {descanso} h')\n",
+    "    print(f'El dinero que podría haber ganado trabajando la jornada máxima sería de {dif_extra} €')\n",
+    "    return\n",
+    "\n",
+    "salario(6.5,25.5)\n",
+    "\n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
