Ejercicios repaso hasta notebook 7

--- a/03-Python/02-Flujos de control/02-Practica/Extra ejercicios para consolidar y respasar control de flujo.ipynb
+++ b/03-Python/02-Flujos de control/02-Practica/Extra ejercicios para consolidar y respasar control de flujo.ipynb
@@ -1311,14 +1311,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error de dato\n"
+      "Error de dato\n",
+      "Tu número favorito es 2.3\n"
      ]
     }
    ],
@@ -1334,28 +1335,31 @@
     "# Si me lo envías tras 1 hora itentandolo nunca lo sabré, me engañas a mi pero sobre todo te engañas a ti mismo\n",
     "\n",
     "# Tras 30 minutos puedes seguir inténtandolo \n",
-    "%reset\n",
+    "\n",
     "input4 = (input('Introduce un numero entero'))\n",
-    "while len(input4) > 0:\n",
+    "while input4:\n",
     "    try:\n",
-    "        input5 = int(input4)\n",
-    "        if input5 != 2:\n",
+    "        int(input4)\n",
+    "        if input4 != 2:\n",
     "            print('Tu número favorito es',input4)\n",
     "            break\n",
-    "        elif input5 == 2:\n",
+    "        elif input4 == 2:\n",
     "            print('El 2 también es mi número favorito')\n",
     "            break\n",
     "    except:\n",
     "        print('Error de dato')\n",
     "        input5 = input('Solo numeros enteros')\n",
-    "        if type(input5) == int:\n",
-    "            if input5 == 2:\n",
-    "                print('El 2 también es mi número favorito')\n",
-    "                break\n",
-    "            else:\n",
-    "                print('Tu número favorito es',input5)\n",
-    "                break\n",
-    "        break"
+    "        if input4 != 2:\n",
+    "            print('Tu número favorito es',input4)\n",
+    "            break\n",
+    "        elif input4 == 2:\n",
+    "            print('El 2 también es mi número favorito')\n",
+    "            break\n",
+    "        continue\n",
+    "\n",
+    "\n",
+    "\n",
+    "        "
    ]
   },
   {
