--- a/03-Python/04-Functions/02-Practica/Ejercicios funciones_enunciados.ipynb
+++ b/03-Python/04-Functions/02-Practica/Ejercicios funciones_enunciados.ipynb
@@ -170,33 +170,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "texto = 'Ya ha salido el Tomb Raider remastered'\n",
-    "\n",
-    "def contador(texto:str, letra):\n",
-    "    texto\n",
-    "    rep = texto.count(letra)\n",
-    "    return rep\n",
-    "\n",
-    "contador(texto,'a')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [
@@ -336,14 +309,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Superare el ramp-up\n"
+     "ename": "NameError",
+     "evalue": "name 'words' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcervantes\u001b[39m(\u001b[38;5;241m*\u001b[39mwords):\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;241m*\u001b[39mwords)\n\u001b[1;32m----> 8\u001b[0m cervantes(\u001b[38;5;241m*\u001b[39m\u001b[43mwords\u001b[49m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'words' is not defined"
      ]
     }
    ],
@@ -353,10 +330,9 @@
     "_3 = 'ramp-up'\n",
     "\n",
     "def cervantes(*words):\n",
-    "    texto = print(*words, sep = ' ')    \n",
+    "    return ' '.join(*words)\n",
     "\n",
-    "cervantes(_1,_2,_3)\n",
-    "    \n"
+    "cervantes(*words)"
    ]
   },
   {
