--- a/03-Python/04-Functions/02-Practica/Extra ejercicios problemas y funciones_enunciados.ipynb
+++ b/03-Python/04-Functions/02-Practica/Extra ejercicios problemas y funciones_enunciados.ipynb
@@ -202,9 +202,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 7, 7.0, 8.0, 8.5, 9.25, 9.875, 10.5625, 11.21875, 11.890625, 12.5546875, 13.22265625, 13.888671875, 14.5556640625, 15.22216796875, 15.888916015625, 16.5555419921875, 17.22222900390625, 17.888885498046875, 18.555557250976562]\n"
+     ]
+    }
+   ],
    "source": [
     "# Un último de sucesiones\n",
     "# Piensa en el ejemplo de Fibonacci\n",
@@ -224,6 +232,56 @@
     "\n",
     "media_suma(lista_ini,20)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5,\n",
+       " 7,\n",
+       " 7.0,\n",
+       " 8.0,\n",
+       " 8.5,\n",
+       " 9.25,\n",
+       " 9.875,\n",
+       " 10.5625,\n",
+       " 11.21875,\n",
+       " 11.890625,\n",
+       " 12.5546875,\n",
+       " 13.22265625,\n",
+       " 13.888671875,\n",
+       " 14.5556640625,\n",
+       " 15.22216796875,\n",
+       " 15.888916015625,\n",
+       " 16.5555419921875,\n",
+       " 17.22222900390625,\n",
+       " 17.888885498046875,\n",
+       " 18.555557250976562,\n",
+       " 19.22222137451172,\n",
+       " 19.88888931274414,\n",
+       " 20.55555534362793]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def media_suma(lista,rango):\n",
+    "    for i in range(rango+1):\n",
+    "        nextn = ((lista[-2] + lista[-1])/2)+1\n",
+    "        lista.append(nextn)\n",
+    "    return lista\n",
+    "\n",
+    "lista_ini = [5,7]\n",
+    "total = 20\n",
+    "media_suma(lista_ini,total)"
    ]
   },
   {
@@ -290,9 +348,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15625.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Crea un programa que pida al usuario dos números enteros para calcular la potencia del primero al segundo. \n",
     "# Captura la excepción de que haya introducido algún número con decimales, y haz que calcule la potencia redondeando\n",
@@ -303,7 +372,7 @@
     "    input2 = input('Introduce otro número')\n",
     "    from math import pow\n",
     "    try:\n",
-    "        resultado = pow(float(input1),float(input2))\n",
+    "        resultado = pow(int(input1),int(input2))\n",
     "        return resultado\n",
     "    except:\n",
     "        x = round(float(input1),0)\n",
@@ -316,46 +385,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5.0\n",
-      "4.0\n",
-      "3.0\n",
-      "0.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Crea un programa que pida al usuario números para calcular la raíz cuadrada de los mismos. \n",
     "# Captura la excepción de que haya introducido un número negativo y haz que calcule la raíz cuadrada\n",
     "# del valor absoluto en esa situación\n",
     "# El programa continua pidiendo al usuario números y calculando la raíz hasta que el usuario introduzce el número 0,\n",
-    "# en cuyo caso, termina el programa.\n",
-    "\n",
+    "# en cuyo caso, termina el programa.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from math import sqrt\n",
     "def raiz ():\n",
-    "    input3 = input('Introduce un número')\n",
-    "    from math import sqrt\n",
-    "    try:\n",
-    "        print((sqrt(float(input3))))\n",
-    "        while input3:\n",
-    "            input4 = input('Introduce un numero')\n",
-    "            x = sqrt(float(input4))\n",
+    "    while True:\n",
+    "        input3 = float(input('Introduce un numero'))\n",
+    "        try:\n",
+    "            if input3 == 0:\n",
+    "                break\n",
+    "            x = (sqrt(input3))\n",
     "            print(x)\n",
-    "            if input4 == '0':\n",
-    "             break\n",
-    "    except:\n",
-    "        print((sqrt(abs(float(input3)))))\n",
-    "        while input3:\n",
-    "            input5 = input('Introduce un numero')\n",
-    "            y = sqrt(abs(float(input5)))\n",
+    "        except:\n",
+    "            y = (sqrt(abs(input3)))\n",
     "            print(y)\n",
-    "            if input5 == '0':\n",
-    "             break\n",
     "    \n",
     "raiz()"
    ]
@@ -371,14 +429,38 @@
     "# con cero decimales\n",
     "# El programa continua pidiendo al usuario números y calculando la potencia hasta que el usuario introduzce \n",
     "# dos veces el número 0, en cuyo caso, termina el programa.\n",
-    "\n"
+    "\n",
+    "from math import pow\n",
+    "def potencia ():\n",
+    "    while True:\n",
+    "        input4 = float(input('Introduce un numero'))\n",
+    "        input5 = float(input('Introduce otro numero'))\n",
+    "        try:\n",
+    "            if (input4) == '0' and input5 == '0':\n",
+    "                break\n",
+    "            x = pow(input4,input5)\n",
+    "            print(x)\n",
+    "        except:\n",
+    "            y = pow (round(input4,0),round(input5,0))\n",
+    "            print(y)\n",
+    "\n",
+    "potencia()\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ada Byron Lovelace\n"
+     ]
+    }
+   ],
    "source": [
     "# La mejor nota\n",
     "# Partiendo de esta lista de diccionarios, imprime por pantalla el nombre y apellidos del/a alumn@ con mejor nota:\n",
@@ -395,7 +477,18 @@
     "        \"apellidos\": \"Brewster Murray\",\n",
     "        \"nota\": 6}\n",
     "\n",
-    "lista_alum = [alum_1, alum_2, alum_3]"
+    "lista_alum = [alum_1, alum_2, alum_3]\n",
+    "\n",
+    "def mejor_nota(lista_alum:list):\n",
+    "        lista_notas = [alumnos['nota'] for alumnos in lista_alum]\n",
+    "        lista_notas.sort()\n",
+    "        for alumnos in lista_alum:\n",
+    "                if alumnos['nota'] == lista_notas[-1]:          \n",
+    "                        print(alumnos['nombre'], alumnos['apellidos'])\n",
+    "        return\n",
+    "        \n",
+    "\n",
+    "mejor_nota(lista_alum)"
    ]
   },
   {
@@ -412,11 +505,10 @@
     "horas_dias = [7, 8, 6, 4, 0, 7.5, 6.5]\n",
     "\n",
     "def salario(horas_dias:list,salario): \n",
-    "    jornal = [jornada*salario for jornada in horas_dias]\n",
-    "    for indice,salario in enumerate(jornal):\n",
-    "        print('El sueldo maximo fue de', max(jornal), 'en la jornada', indice + 1)\n",
-    "        print('El sueldo minimo fue de', min(jornal), 'en la jornada', indice + 1)\n",
-    "    return\n",
+    "    jornal = [(jornada*salario) for jornada in (horas_dias)]\n",
+    "    maximo = max(jornal)\n",
+    "    minimo = min(jornal)\n",
+    "    return maximo,minimo\n",
     "\n",
     "salario(horas_dias, 25)"
    ]
@@ -443,13 +535,8 @@
     "    jornal = [jornada*salario for jornada in horas_dias]\n",
     "    jornada_max = 8\n",
     "    sueldo_integro = salario*jornada_max\n",
-    "    diferencia = [sueldo_integro-jornal_diario for jornal_diario in jornal]\n",
-    "    for ind,extra in enumerate(diferencia):\n",
-    "        if extra == 0:\n",
-    "            print('En la jornada', ind + 1, 'se trabajo el maximo de horas')\n",
-    "        else:   \n",
-    "            print('En la jornada', ind + 1, 'se podrian haber ganado', extra, '€')\n",
-    "    return\n",
+    "    diferencia = [sueldo_integro-jornal_diario for jornal_diario in enumerate(jornal)]\n",
+    "    return diferencia\n",
     "\n",
     "salario (horas_dias,25)\n",
     "diferencia(horas_dias,25)"
@@ -479,7 +566,29 @@
     "    return\n",
     "\n",
     "salario(6.5,25.5)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def salario(jornada:int,salario:float): \n",
+    "    jornal = jornada*salario\n",
+    "    h_dia = 24\n",
+    "    descanso = h_dia - jornada\n",
+    "    jornada_max = 8\n",
+    "    jornal_max = jornada_max*salario\n",
+    "    dif_extra = jornal_max - jornal\n",
+    "    return (jornal,descanso,dif_extra)\n",
     "\n",
+    "salario(6.5,25)\n",
+    "\n",
+    "'''Lo mejor es que si hay muchas variables que puedan ser utiles en adelante del codigo el resultado de la funcion sea\n",
+    "un diccionario con todas ellas, al no estar indexado puedo acceder con el nombre de la llave al valor y seguir usandolo\n",
+    "más adelante'''\n",
     "    "
    ]
   },
