--- a/03-Python/04-Functions/02-Practica/Extra ejercicios problemas y funciones_enunciados.ipynb
+++ b/03-Python/04-Functions/02-Practica/Extra ejercicios problemas y funciones_enunciados.ipynb
@@ -398,24 +398,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "from math import sqrt\n",
+    "from math import fabs\n",
     "def raiz ():\n",
     "    while True:\n",
     "        input3 = float(input('Introduce un numero'))\n",
     "        try:\n",
     "            if input3 == 0:\n",
     "                break\n",
-    "            x = (sqrt(input3))\n",
-    "            print(x)\n",
+    "            print((sqrt(input3)))\n",
     "        except:\n",
-    "            y = (sqrt(abs(input3)))\n",
-    "            print(y)\n",
+    "            print((sqrt(fabs(input3))))\n",
     "    \n",
-    "raiz()"
+    "raiz()\n",
+    "\n",
+    "\n",
+    "#con continue le decimos al bucle en que punto del codigo quiero que vuelva al bucle (ignorando todo el codigo que hay por debajo de el)"
    ]
   },
   {
